--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo build --release --locked && sh ./scripts/compile-all.sh
+      run: cargo install cargo-zigbuild && cargo build --release --locked && sh ./scripts/compile-all.sh
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
