--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - uses: mlugg/setup-zig
     - name: Build
       run: cargo install cargo-zigbuild && cargo build --release --locked && sh ./scripts/compile-all.sh
     - name: Upload binaries to release
