--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,10 +18,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - uses: https://codeberg.org/mlugg/setup-zig@v2
+    - uses: mlugg/setup-zig@v2
     - run: zig build test
     - name: Build
-      run: cargo install cargo-zigbuild && cargo build --release --locked && sh ./scripts/compile-all.sh
+      run: sh ../scripts/pipeline-run.sh
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
