--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: mlugg/setup-zig@v2
     - run: zig init
     - name: Build
-      run: sh ../scripts/pipeline-run.sh
+      run: sh ./scripts/pipeline-run.sh
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
