--- a/.github/workflows/homebrew-release.yml
+++ b/.github/workflows/homebrew-release.yml
@@ -20,8 +20,8 @@ jobs:
           SHA256=$(curl -sL $URL | shasum -a 256 | cut -d' ' -f1)
           
           # Clone homebrew tap
-          git clone https://github.com/${{ github.repository_owner }}/homebrew-glimpse
-          cd homebrew-glimpse
+          git clone https://github.com/${{ github.repository_owner }}/glimpse
+          cd glimpse
           
           # Update formula
           sed -i "s|url \".*\"|url \"$URL\"|" Formula/glimpse.rb
