--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -41,7 +41,31 @@ jobs:
         title: Release ${{ steps.generate_release_tag.outputs.next_release_tag }}
         files: |
           README.md
-          SHA256SUMS
+          SHA*
           dist/*.*
+    - name: Update Homebrew formula
+      env:
+        HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.HOMEBREW_TOKEN }}
+      run: |
+          # Download release
+          VERSION=${GITHUB_REF#refs/tags/v}
+          URL="https://github.com/${{ github.repository }}/archive/refs/tags/${GITHUB_REF#refs/tags/}.tar.gz"
           
+          # Calculate SHA256
+          SHA256=$(curl -sL $URL | shasum -a 256 | cut -d' ' -f1)
+          
+          # Clone homebrew tap
+          git clone https://github.com/${{ github.repository_owner }}/glimpse
+          cd glimpse
+          
+          # Update formula
+          sed -i "s|url \".*\"|url \"$URL\"|" Formula/glimpse.rb
+          sed -i "s|sha256 \".*\"|sha256 \"$SHA256\"|" Formula/glimpse.rb
+          
+          # Commit and push
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add Formula/glimpse.rb
+          git commit -m "Update to version $VERSION"
+          git push
           
