feat(clippy): rust lint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ sc = "run --bin semantic-commit"
 brew-publish = "run --bin homebrew-publish"
 brew = "run --bin homebrew-publish"
 hb = "run --bin homebrew-publish"
-lint = "cargo clippy"
+lint = "run cargo clippy"
