--- a/docker/docker-compose-build-dpkg.yaml
+++ b/docker/docker-compose-build-dpkg.yaml
@@ -2,5 +2,5 @@ services:
   dpkg:
     build: .
     command: "sh /glimpse/docker/dpkg.sh"
-    #volumes:
-    #- /glimpse/docker/host:./codebase/host
+    volumes:
+      - ./host:/glimpse/host:rw
