--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -60,7 +60,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: ckissmann/homebrew-glimpse
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
         path: homebrew-glimpse
     - name: Update Formula
       run: |
