--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2024"
 
 [dependencies]
 colored = "3.1.1"
+fs = "0.0.5"
 rand = "0.10.0"
+tempfile = "3.25.0"
 
 [alias]
 commit = "run --bin semantic-commit"
@@ -14,3 +16,6 @@ brew-publish = "run --bin homebrew-publish"
 brew = "run --bin homebrew-publish"
 hb = "run --bin homebrew-publish"
 lint = "run cargo clippy"
+
+[dev-dependencies]
+tempfile = "3.25.0"
