--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -71,6 +71,10 @@ jobs:
         VERSION="${{ steps.version.outputs.version_no_v }}"
         URL="https://github.com/ckissmann/glimpse/archive/refs/tags/${TAG}.tar.gz"
           
+        URL_ARM="https://github.com/ckissmann/glimpse/archive/refs/tags/${TAG}.tar.gz"
+        URL_AMD="https://github.com/ckissmann/glimpse/archive/refs/tags/${TAG}.tar.gz"
+            
+
         echo "📦 Tag: $TAG"
         echo "📦 Version: $VERSION"
         echo "📦 URL: $URL"
@@ -78,11 +82,17 @@ jobs:
         # Download and calculate SHA256
         echo "⏳ Calculating SHA256..."
         SHA256=$(curl -sL "$URL" | shasum -a 256 | cut -d' ' -f1)
+        SHA256_ARM=$(curl -sL "$URL_ARM" | shasum -a 256 | cut -d' ' -f1)
+        SHA256_AMD=$(curl -sL "$URL_AMD" | shasum -a 256 | cut -d' ' -f1)
         echo "🔐 SHA256: $SHA256"
           
         # Update formula file in the homebrew-glimpse repository
         sed -i.bak "s|url \".*\"|url \"$URL\"|" homebrew-glimpse/Formula/glimpse.rb
-        sed -i.bak "s|sha256 \".*\"|sha256 \"$SHA256\"|" homebrew-glimpse/Formula/glimpse.rb
+        
+        sed -i.bak "5s|sha256 \".*\"|sha256 \"$SHA256\"|" homebrew-glimpse/Formula/glimpse.rb
+        sed -i "10s|sha256 \".*\"|sha256 \"$SHA256_ARM\"|" homebrew-glimpse/Formula/glimpse.rb
+        sed -i "13s|sha256 \".*\"|sha256 \"$SHA256_AMD\"|" homebrew-glimpse/Formula/glimpse.rb
+
         sed -i.bak "s|version \".*\"|version \"$VERSION\"|" homebrew-glimpse/Formula/glimpse.rb
         rm homebrew-glimpse/Formula/glimpse.rb.bak
           
