--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,13 @@ sc = "run --bin semantic-commit"
 brew-publish = "run --bin homebrew-publish"
 brew = "run --bin homebrew-publish"
 hb = "run --bin homebrew-publish"
+lint = "run cargo clippy"
 
 [dev-dependencies]
 tempfile = "3.25.0"
+
+[package.metadata.deb.variants.arm64]
+name = "glimpse"
+
+[package.metadata.deb.variants.amd64]
+name = "glimpse"
