refactor(pipeline)!: manual trigger
BREAKING CHANGE: manual trigger

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,3 +2,4 @@
 commit = "run --bin commit"
 c = "run --bin commit"
 lint = "clippy --all-targets --all-features"
+release = "../scripts/release.sh"
