--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -35,30 +35,43 @@ jobs:
     - run: zig init
     - name: Build
       run: sh ./scripts/pipeline-run.sh
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
     - name: Build DEB packages
       run: |
-        mkdir -p dist
+        mkdir -p dist/linux_amd64 dist/linux_arm64
         
-        # Build AMD64
         echo "📦 Building AMD64..."
-        docker buildx build --platform linux/amd64 -f Dockerfile.deb -o dist/tmp-amd64 .
+        docker buildx build \
+          --platform linux/amd64 \
+          -f Dockerfile.deb \
+          --output type=local,dest=dist/tmp-amd64 \
+          .
+        
         for file in dist/tmp-amd64/*.deb; do
+          [ -f "$file" ] || continue
           base=$(basename "$file" .deb | sed 's/_amd64$//')
-          mv "$file" "dist/${base}_amd64.deb"
+          mv "$file" "dist/linux_amd64/${base}_amd64.deb"
         done
         rm -rf dist/tmp-amd64
         
-        # Build ARM64
         echo "📦 Building ARM64..."
-        docker buildx build --platform linux/arm64 -f Dockerfile.deb -o dist/tmp-arm64 .
+        docker buildx build \
+          --platform linux/arm64 \
+          -f Dockerfile.deb \
+          --output type=local,dest=dist/tmp-arm64 \
+          .
+        
         for file in dist/tmp-arm64/*.deb; do
+          [ -f "$file" ] || continue
           base=$(basename "$file" .deb | sed 's/_arm64$//')
-          mv "$file" "dist/${base}_arm64.deb"
+          mv "$file" "dist/linux_arm64/${base}_arm64.deb"
         done
         rm -rf dist/tmp-arm64
         
         echo "✅ Packages built:"
-        ls -lh dist/*.deb
+        ls -lh dist/linux_amd64/*.deb dist/linux_arm64/*.deb
     - name: Generate release tag
       id: generate_release_tag
       uses: amitsingh-007/next-release-tag@v4.0.0
