--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tempfile = "3.25.0"
 
 [dev-dependencies]
 tempfile = "3.25.0"
+cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
 
 [[bin]]
 name = "glimpse"
