feat(hooks): pre_commit_hooks

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,4 +1,5 @@
 [alias]
 commit = "run --bin commit"
 c = "run --bin commit"
+setup = "run --bin setup"
 lint = "clippy --all-targets --all-features"
