--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ tempfile = "3.25.0"
 
 [dev-dependencies]
 tempfile = "3.25.0"
-cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
 
 [[bin]]
 name = "glimpse"
@@ -22,3 +21,7 @@ path = "src/main.rs"
 [[bin]]
 name = "commit"
 path = "src/bin/commit.rs"
+
+[[bin]]
+name = "setup"
+path = "src/bin/setup.rs"
