--- a/.github/workflows/rust-tests.yml
+++ b/.github/workflows/rust-tests.yml
@@ -1,10 +1,8 @@
 name: Tests
 
 on:
-  push:
-    branches: [ main, release ]
   pull_request:
-    branches: [ main, release ]
+    branches: [ master, release ]
 
 jobs:
   test:
