--- a/.github/workflows/semantic-pr.yml
+++ b/.github/workflows/semantic-pr.yml
@@ -2,7 +2,7 @@ name: Check Semantic Commit
 
 on:
   pull_request:
-    branches: [ "release" ]
+    branches: [ "release", "master" ]
 
 permissions:
   contents: write
