--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -35,6 +35,11 @@ jobs:
     - name: Build windows
       run: sh ./scripts/compile-all.sh --windows
 
+    - uses: actions/upload-artifact@v4
+      with:
+        name: deb-packages
+        path: dist/*.deb
+
   build:
     strategy:
       matrix:
@@ -50,7 +55,14 @@ jobs:
       run: sh ./scripts/pipeline-run.sh
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    
+    - name: Download artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: artifacts  
+    - name: Organize files
+      run: |
+        find artifacts -type f -exec cp {} dist/ \;
+        ls -lh dist/
     - name: Build DEB packages
       run: |
         mkdir -p dist/linux_amd64 dist/linux_arm64
@@ -104,6 +116,7 @@ jobs:
           dist/*.*
           dist/linux_amd64/*.deb
           dist/linux_arm64/*.deb
+          dist/*.deb
 
     - name: Extract version from release
       id: version
