--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -37,8 +37,8 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: deb-packages
-        path: dist/*.deb
+        name: exe-files
+        path: dist/*.exe
 
   build:
     strategy:
