--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -149,9 +149,7 @@ jobs:
         git restore .
         git checkout main    
         git fetch
-        git pull
-
-        git branch -D github-action-patch       
+        git pull 
 
         echo "📦 Tag: $TAG"
         echo "📦 Version: $VERSION"
@@ -189,7 +187,7 @@ jobs:
           
         git add Formula/glimpse.rb
 
-        git checkout -B github-action-patch
+        git checkout -B "github-action-update-$(date +%Y-%m-%d-%H-%M-%S)"
 
         git commit -m "chore: update formula to ${{ steps.version.outputs.version }}"
         git push origin github-action-patch
