--- a/.github/workflows/create-homebrew-pr.yml
+++ b/.github/workflows/create-homebrew-pr.yml
@@ -10,7 +10,7 @@ name: homebrew-pr
 on:
   workflow_dispatch:
     inputs:
-      homebrew-pr:
+      release:
         description: 'Is this a release?'
         required: false
         default: false
@@ -57,25 +57,17 @@ jobs:
     - name: Get latest release tag
       id: latest_release
       run: |
-        TAG=$(gh release list --repo ${{ github.repository }} --limit 1 --json tagName --jq '.[0].tagName')
-        VERSION_NO_V=${TAG#v}
-        
-        echo "version=$TAG" >> $GITHUB_OUTPUT
-        echo "version_no_v=$VERSION_NO_V" >> $GITHUB_OUTPUT
-        
-        echo "📦 Latest release: $TAG"
-        echo "📦 Version: $VERSION_NO_V"
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Update Formula
-      run: |
-        TAG="${{ steps.latest_release.outputs.tag }}"
-        VERSION="${{ steps.latest_release.outputs.version_no_v }}"
+        TAG="${{ steps.version.outputs.version }}"
+        VERSION="${{ steps.version.outputs.version_no_v }}"
         URL="https://github.com/ckissmann/glimpse/archive/refs/tags/${TAG}.tar.gz"
           
         URL_ARM="https://github.com/ckissmann/glimpse/archive/refs/tags/${TAG}.tar.gz"
         URL_AMD="https://github.com/ckissmann/glimpse/archive/refs/tags/${TAG}.tar.gz"
-            
+
+        git restore .
+        git checkout main    
+        git fetch
+        git pull 
 
         echo "📦 Tag: $TAG"
         echo "📦 Version: $VERSION"
@@ -113,7 +105,7 @@ jobs:
           
         git add Formula/glimpse.rb
 
-        git checkout -B github-action-patch
+        git checkout -B "github-action-update-$(date +%Y-%m-%d-%H-%M-%S)"
 
         git commit -m "chore: update formula to ${{ steps.version.outputs.version }}"
         git push origin github-action-patch
