--- a/.github/workflows/create-homebrew-pr.yml
+++ b/.github/workflows/create-homebrew-pr.yml
@@ -116,9 +116,11 @@ jobs:
           
         git add Formula/glimpse.rb
 
-        git checkout -B "github-action-update-$(date +%Y-%m-%d-%H-%M-%S)"
+        BRANCH_NAME="github-action-update-$(date +%Y-%m-%d-%H-%M-%S)"
+
+        git checkout -B "${BRANCH_NAME}"
 
         git commit -m "chore: update formula to ${{ steps.version.outputs.version }}"
-        git push origin github-action-patch
+        git push origin "${BRANCH_NAME}"
           
         echo "✅ Pushed to homebrew-glimpse repository!"
