--- a/.github/workflows/create-homebrew-pr.yml
+++ b/.github/workflows/create-homebrew-pr.yml
@@ -77,8 +77,8 @@ jobs:
         VERSION="${{ steps.latest_release.outputs.version_no_v }}"
         URL="https://github.com/ckissmann/glimpse/archive/refs/tags/${TAG}.tar.gz"
           
-        URL_ARM="https://github.com/ckissmann/glimpse/archive/refs/tags/${TAG}.tar.gz"
-        URL_AMD="https://github.com/ckissmann/glimpse/archive/refs/tags/${TAG}.tar.gz"
+        URL_ARM="https://github.com/ckissmann/glimpse/releases/download/${TAG}/glimpse-1.0.0-macos-arm"
+        URL_AMD="https://github.com/ckissmann/glimpse/releases/download/${TAG}/glimpse-1.0.0-macos-intel"
 
         echo "📦 Tag: $TAG"
         echo "📦 Version: $VERSION"
@@ -92,7 +92,9 @@ jobs:
         echo "🔐 SHA256: $SHA256"
           
         # Update formula file in the homebrew-glimpse repository
-        sed -i.bak "s|url \".*\"|url \"$URL\"|" homebrew-glimpse/Formula/glimpse.rb
+        sed -i.bak "4s|url \".*\"|url \"$URL\"|" homebrew-glimpse/Formula/glimpse.rb
+        sed -i.bak "9s|url \".*\"|url \"$URL_ARM\"|" homebrew-glimpse/Formula/glimpse.rb
+        sed -i.bak "12s|url \".*\"|url \"$URL_AMD\"|" homebrew-glimpse/Formula/glimpse.rb
 
         sed -i.bak "5s|sha256 \".*\"|sha256 \"$SHA256\"|" homebrew-glimpse/Formula/glimpse.rb
         sed -i "10s|sha256 \".*\"|sha256 \"$SHA256_ARM\"|" homebrew-glimpse/Formula/glimpse.rb
